--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 <div class="about-text">
                     <h3>Passionnée par le développement</h3>
                     <p>Bonjour! Je m'appelle Rania Hassine et je suis une élève en première année à l'IUT d'Orsay au département informatique. </p>
-                    <p>Je me suis dirigée dans l'informatique après avoir fait NSI (numérique science de l'informatique) au lycée. Comme j'ai trouver ça très interessant, me diriger vers l'informatique me sembla être une évidence. J'ai notamment pu acquérir des connaissances en algorithmique et comprendre les différentes structures que peuvent avoir un code.</p>
-                    <p>Au cours de cette première année je me suis découvert une véritable passion pour les différents domaines de l'informatique. Surtout dans la programmation à la fois front-end et back-end.</p>
-                    <p>Quand je ne code pas, j'aime me renseigner sur comment je pourrais encore plus customiser mon téléphone ou mon pc. Ça me mène souvent à faire des recherches et à découvrir. J'aime également me plonger dans une belle oeuvre de fiction, je lis et j'aime regarder des séries depuis que je suis petite.</p>
+                    <p>Je me suis dirigée dans l'informatique après avoir fait NSI (numérique science de l'informatique) au lycée. Comme j'ai trouvé ça très interessant, me diriger vers l'informatique me sembla alors être une évidence. J'ai notamment pu acquérir des connaissances en algorithmique et comprendre les différentes structures que peuvent avoir un code.</p>
+                    <p>Au cours de cette première année je me suis découverte une véritable passion pour les différents domaines de l'informatique. Surtout dans la programmation à la fois front-end et back-end.</p>
+                    <p>Quand je ne code pas, j'aime me renseigner sur comment je pourrais encore plus customiser mon téléphone ou mon pc. Ça me mène souvent à faire des recherches et à découvrir de nouvelles choses. J'aime également me plonger dans une belle oeuvre de fiction, je lis et j'aime regarder des séries depuis que je suis petite.</p>
                 </div>
             </div>
         </div>
